fixed sidebar alignment.... again

--- a/client/src/components/SideBar/style.css
+++ b/client/src/components/SideBar/style.css
@@ -1,5 +1,6 @@
 
 #side-bar-menu {
+  align-self: end;
   position: sticky;
   top: 75px;
 }
