--- a/client/src/pages/FriendProfile/style.css
+++ b/client/src/pages/FriendProfile/style.css
@@ -44,8 +44,8 @@
 
 #side-bar-column {
   display: flex;
-  justify-content: space-around;
-  align-items: flex-start;
-  padding: 0px;
-  padding-right: 15px;
+  justify-content: flex-end;
+  align-items: flex-end;
+  padding: 20px;
+  padding-top: 0px;
 }
